# libecpint

./: #CMakeLists.txt#  .codecov.yml  .gitignore  .readthedocs.yml  ARCHITECTURE.md  CITATION  CMakeLists.txt  LICENCE  LICENSE  README.md  azure-pipelines.yml
.github/workflows/: clang-format.yml  draft-pdf.yml
build_debug/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
build_debug/doc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_debug/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake  generate  qlist.txt
build_debug/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/: FindCLANG_FORMAT.cmake  make_release.sh
doc/: CMakeLists.txt
doc/doxygen/: .gitignore  CMakeLists.txt  Doxyfile
doc/doxygen/xml/: _r_e_a_d_m_e_8md.xml  angular_8cpp.xml  angular_8hpp.xml  api_8cpp.xml  api_8hpp.xml  bessel_8cpp.xml  bessel_8hpp.xml  classlibecpint_1_1_angular_integral.xml  classlibecpint_1_1_bessel_function.xml  classlibecpint_1_1_e_c_p_basis.xml  classlibecpint_1_1_e_c_p_integral.xml  classlibecpint_1_1_g_c_quadrature.xml  classlibecpint_1_1_radial_integral.xml  classunrol__radial_1_1_qijk.xml  dir_2a4bd5cb231436a2565b9ec017c8f12b.xml  dir_52981df39a7c57b8ef961c18e6f88235.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_c6b3506109318da869165b36926fcb30.xml  dir_c85d3e3c5052e9ad9ce18c6863244a25.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  ecp_8cpp.xml  ecp_8hpp.xml  ecpint_8cpp.xml  ecpint_8hpp.xml  gaussquad_8cpp.xml  gaussquad_8hpp.xml  generate_8cpp.xml  generate_8hpp.xml  generated_2radial_2radial__gen_8cpp.xml  gshell_8cpp.xml  gshell_8hpp.xml  index.xml  indexpage.xml  lib_2radial__gen_8cpp.xml  libecpint_8hpp.xml  makelist_8py.xml  mathutil_8cpp.xml  mathutil_8hpp.xml  multiarr_8hpp.xml  namespacelibecpint.xml  (+26 more)
doc/joss/: paper.bib  paper.md
doc/sphinx/: CMakeLists.txt  Makefile  make.bat  requirements.txt
doc/sphinx/source/: conf.py  index.rst  installation.rst  introduction.rst  usage.rst
doc/sphinx/source/api/: class_structlibecpint_1_1_shell_pair_data.rst  class_view_hierarchy.rst  classlibecpint_1_1_angular_integral.rst  classlibecpint_1_1_bessel_function.rst  classlibecpint_1_1_e_c_p_integral.rst  classlibecpint_1_1_g_c_quadrature.rst  classlibecpint_1_1_radial_integral.rst  classunrol__radial_1_1_qijk.rst  define_api_8hpp_1a9c5be1c4ba084c752edba30f62c5da6d.rst  define_ecpint_8hpp_1a8546f51f524d0baff0bf3f3b321fbc9b.rst  define_mathutil_8cpp_1a9450534f682d7a567d3872551afa2ec4.rst  define_mathutil_8hpp_1a30bbac291639d5f7d964a92fa8742b94.rst  define_mathutil_8hpp_1a620539bb392918432be69023bb266dfb.rst  define_mathutil_8hpp_1aaf00c7de57af68f4e9d7acc87adb8d87.rst  define_mathutil_8hpp_1ae71449b1cc6e6250b91f539153a7a0d3.rst  dir__Users_robertshaw_devfiles_libecpint_include.rst  dir__Users_robertshaw_devfiles_libecpint_include_libecpint.rst  dir__Users_robertshaw_devfiles_libecpint_new_include.rst  dir__Users_robertshaw_devfiles_libecpint_new_include_libecpint.rst  dir__Users_robertshaw_devfiles_libecpint_new_src.rst  dir__Users_robertshaw_devfiles_libecpint_new_src_generated.rst  dir__Users_robertshaw_devfiles_libecpint_new_src_generated_radial.rst  dir__Users_robertshaw_devfiles_libecpint_new_src_lib.rst  dir__Users_robertshaw_devfiles_libecpint_src.rst  dir__Users_robertshaw_devfiles_libecpint_src_generated.rst  dir__Users_robertshaw_devfiles_libecpint_src_generated_radial.rst  dir__Users_robertshaw_devfiles_libecpint_src_lib.rst  enum_namespacelibecpint_1a61c66c38649b648ca25caaff9ebc6c3f.rst  file__Users_robertshaw_devfiles_libecpint_README.md.rst  file__Users_robertshaw_devfiles_libecpint_include_generate.hpp.rst  file__Users_robertshaw_devfiles_libecpint_include_libecpint.hpp.rst  file__Users_robertshaw_devfiles_libecpint_include_libecpint_angular.hpp.rst  file__Users_robertshaw_devfiles_libecpint_include_libecpint_api.hpp.rst  file__Users_robertshaw_devfiles_libecpint_include_libecpint_bessel.hpp.rst  file__Users_robertshaw_devfiles_libecpint_include_libecpint_ecp.hpp.rst  file__Users_robertshaw_devfiles_libecpint_include_libecpint_ecpint.hpp.rst  file__Users_robertshaw_devfiles_libecpint_include_libecpint_gaussquad.hpp.rst  file__Users_robertshaw_devfiles_libecpint_include_libecpint_gshell.hpp.rst  file__Users_robertshaw_devfiles_libecpint_include_libecpint_mathutil.hpp.rst  file__Users_robertshaw_devfiles_libecpint_include_libecpint_multiarr.hpp.rst  (+471 more)
example/: CMakeLists.txt  README.md  example.cpp  hydrogen.bas  iodine.bas
include/: generate.hpp  libecpint.hpp  testutil.hpp
include/libecpint/: angular.hpp  api.hpp  bessel.hpp  config.hpp.in  ecp.hpp  ecpint.hpp  (+6 more)
src/: CMakeLists.txt  config.cmake.in  generate.cpp  makelist.py
src/lib/: .gitignore  angular.cpp  api.cpp  bessel.cpp  ecp.cpp  ecpint.cpp  gaussquad.cpp  gshell.cpp  mathutil.cpp  qgen.cpp  radial_gen.cpp  radial_quad.cpp
tests/: CMakeLists.txt
tests/lib/: CMakeLists.txt
tests/lib/api_test1/: CMakeLists.txt  api_test1.output  test1.cpp
tests/lib/api_test2/: CMakeLists.txt  api_test2.output  test2.cpp
tests/lib/deriv_test1/: CMakeLists.txt  deriv_test1.output  test1.cpp
tests/lib/deriv_test2/: CMakeLists.txt  deriv_test2.output  test2.cpp
tests/lib/hess_test1/: CMakeLists.txt  hess_test1.output  test1.cpp
tests/lib/hess_test2/: CMakeLists.txt  hess_test2.output  test2.cpp
tests/lib/int_test1/: CMakeLists.txt  test1.cpp  test1.output
tests/lib/int_test2/: CMakeLists.txt  test2.cpp  test2.output
tests/lib/ref_atom/: CMakeLists.txt  generate_reference.py  ref_atom.output  test.cpp
tests/lib/scaling_test/: CMakeLists.txt  test.cpp
tests/lib/screen_scan/: CMakeLists.txt  test.cpp
tests/lib/stress_test/: CMakeLists.txt  test.cpp
tests/lib/test1/: CMakeLists.txt  test1.output
tests/lib/test2/: CMakeLists.txt  test2.cpp
tests/lib/type1_test/: CMakeLists.txt  test1.cpp  type1_test.output
tests/lib/type1_test1/: CMakeLists.txt  test1.cpp  type1_test1.output
tests/lib/type1_test2/: CMakeLists.txt  test2.cpp  type1_test2.output
tests/units/ecp/: CMakeLists.txt  ecp.cpp  ecpbasis.cpp
(+108 files in other folders)
